--- a/index.html
+++ b/index.html
@@ -9,24 +9,35 @@
 </head>
 <body>
 
-	<div class="menu">
-		<input type="" name="" id="input" placeholder="Enter a city...">
-		<button id="btn">Search</button>
 
-		<div id="description"></div>
+	<div id="container">
+		<div id="menu">
+			<input type="" name="" placeholder="Enter a city">
+			<button>Search</button>
+		</div>
+
+		<div id="description">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
 	</div>
+
 
 	<!--
 	<img src="http://openweathermap.org/img/w/02d.png">
 	-->
 
-	<i class="owf owf-801 owf-5x owf-border"></i>
+	<!--<i class="owf owf-801 owf-5x owf-border"></i>-->
 
 
 
 
 
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="test.js"></script>
 
 </body>
 </html>
